--- a/index.html
+++ b/index.html
@@ -2027,6 +2027,26 @@ document.getElementById('loginForm').addEventListener('submit', async function(e
 </script>
 <!-- /PATCH -->
 
+
+<script>
+document.addEventListener("DOMContentLoaded", function(){
+  const loginForm = document.getElementById("loginForm");
+  if (loginForm){
+    loginForm.addEventListener("submit", function(e){
+      e.preventDefault();
+      const user = document.getElementById("username").value.trim();
+      const pass = document.getElementById("password").value.trim();
+      if(user === "admin" && pass === "admin123"){
+        document.getElementById("loginScreen").classList.add("hidden");
+        document.getElementById("mainApp").classList.remove("hidden");
+      } else {
+        alert("Usuario o contraseña incorrectos");
+      }
+    });
+  }
+});
+</script>
+
 </body>
                 </html>
             `);
@@ -2752,6 +2772,26 @@ ventanaImpresion.document.close();
 })();
 </script>
 <!-- /PATCH -->
+
+
+<script>
+document.addEventListener("DOMContentLoaded", function(){
+  const loginForm = document.getElementById("loginForm");
+  if (loginForm){
+    loginForm.addEventListener("submit", function(e){
+      e.preventDefault();
+      const user = document.getElementById("username").value.trim();
+      const pass = document.getElementById("password").value.trim();
+      if(user === "admin" && pass === "admin123"){
+        document.getElementById("loginScreen").classList.add("hidden");
+        document.getElementById("mainApp").classList.remove("hidden");
+      } else {
+        alert("Usuario o contraseña incorrectos");
+      }
+    });
+  }
+});
+</script>
 
 </body>
 </html>
