--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                             <i class="fas fa-mobile-alt text-blue-600"></i>
                         </div>
                         <div>
-                            <h1 class="text-lg font-bold text-gray-800">Mundo</h1>
-                            <h1 class="text-lg font-bold text-blue-600">Electrónico</h1>
+                            <h1 class="text-lg font-bold text-gray-800">Fixly</h1>
+                            <h1 class="text-lg font-bold text-blue-600">Taller</h1>
                         </div>
                     </div>
                 </div>
