--- a/index.html
+++ b/index.html
@@ -564,6 +564,214 @@
 </div>
 <!-- ====== Fin Clientes ====== -->
 
+                // ====== Clientes MVP (Backend) ======
+(() => {
+  const API_BASE = '/api'; // ⚠️ cambia si usás otro host, ej: 'https://api.fixlytaller.com'
+
+  const $ = (s, p = document) => p.querySelector(s);
+  const $$ = (s, p = document) => [...p.querySelectorAll(s)];
+
+  // refs UI
+  const tblBody = $('#clientsTbody');
+  const searchInput = $('#clientSearch');
+  const btnNew = $('#btnNewClient');
+  const emptyState = $('#clientsEmpty');
+
+  // modal refs
+  const modal = $('#client-modal');
+  const modalTitle = $('#client-modal-title');
+  const form = $('#client-form');
+  const fId = $('#cl-id');
+  const fName = $('#cl-name');
+  const fPhone = $('#cl-phone');
+  const fEmail = $('#cl-email');
+  const fNotes = $('#cl-notes');
+  const dupMsg = $('#dup-msg');
+  const btnSaveRepair = $('#btn-save-repair');
+
+  // state
+  let clients = [];
+  let page = 1;
+  let limit = 20;
+  let query = '';
+
+  // -------- API helpers --------
+  async function api(path, options = {}) {
+    const res = await fetch(`${API_BASE}${path}`, {
+      headers: { 'Content-Type': 'application/json' },
+      credentials: 'include', // si usás cookies/sesión
+      ...options
+    });
+    // 204 No Content
+    if (res.status === 204) return null;
+    const data = await res.json().catch(() => ({}));
+    if (!res.ok) {
+      const msg = data?.error || `HTTP ${res.status}`;
+      throw new Error(msg);
+    }
+    return data;
+  }
+
+  const listClients   = (q = '', p = 1) => api(`/clients?query=${encodeURIComponent(q)}&page=${p}&limit=${limit}`);
+  const createClient  = (payload)       => api(`/clients`, { method: 'POST', body: JSON.stringify(payload) });
+  const updateClient  = (id, payload)   => api(`/clients/${id}`, { method: 'PATCH', body: JSON.stringify(payload) });
+  const deleteClient  = (id)            => api(`/clients/${id}`, { method: 'DELETE' });
+
+  const normPhone = (v) => v.replace(/[^\d+]/g, '');
+
+  // -------- render --------
+  function renderRows(list) {
+    tblBody.innerHTML = '';
+    if (!list.length) {
+      emptyState?.classList.remove('hidden');
+      return;
+    }
+    emptyState?.classList.add('hidden');
+
+    list.forEach(c => {
+      const tr = document.createElement('tr');
+      tr.className = 'hover:bg-gray-50';
+      tr.innerHTML = `
+        <td class="px-4 py-3 font-medium text-gray-800">${c.nombre || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.celular || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.email || ''}</td>
+        <td class="px-4 py-3 text-center">
+          <span class="inline-flex items-center justify-center rounded-full bg-gray-200 px-2 text-xs">${c.abiertas ?? 0}</span>
+        </td>
+        <td class="px-4 py-3 text-right">
+          <div class="inline-flex gap-2">
+            <button class="text-indigo-600 hover:underline" data-act="edit" data-id="${c.id}">Editar</button>
+            <button class="text-emerald-600 hover:underline" data-act="repair" data-id="${c.id}">Nueva reparación</button>
+            <button class="text-rose-600 hover:underline" data-act="del" data-id="${c.id}">Eliminar</button>
+          </div>
+        </td>`;
+      tblBody.appendChild(tr);
+    });
+  }
+
+  async function loadAndRender() {
+    try {
+      const data = await listClients(query, page);
+      clients = data.items || [];
+      renderRows(clients);
+      // si querés, actualizá un contador con data.total
+    } catch (e) {
+      console.error(e);
+      alert('No se pudieron cargar los clientes.');
+    }
+  }
+
+  // -------- modal helpers --------
+  function openModal(mode = 'new', client = null) {
+    modal.classList.remove('hidden');
+    dupMsg.classList.add('hidden');
+    if (mode === 'edit' && client) {
+      modalTitle.textContent = 'Editar cliente';
+      fId.value = client.id;
+      fName.value = client.nombre || '';
+      fPhone.value = client.celular || '';
+      fEmail.value = client.email || '';
+      fNotes.value = client.notas || '';
+    } else {
+      modalTitle.textContent = 'Nuevo cliente';
+      fId.value = '';
+      form.reset();
+    }
+    setTimeout(() => fName.focus(), 50);
+  }
+  function closeModal() { modal.classList.add('hidden'); }
+
+  // -------- events --------
+  btnNew?.addEventListener('click', () => openModal('new'));
+  $$('#client-modal [data-close-modal]').forEach(el => el.addEventListener('click', closeModal));
+
+  searchInput?.addEventListener('input', (e) => {
+    query = e.target.value || '';
+    page = 1;
+    loadAndRender();
+  });
+
+  tblBody?.addEventListener('click', async (e) => {
+    const btn = e.target.closest('[data-act]');
+    if (!btn) return;
+    const id = btn.dataset.id;
+    const act = btn.dataset.act;
+    const c = clients.find(x => x.id === id);
+    if (!c) return;
+
+    if (act === 'edit') openModal('edit', c);
+
+    if (act === 'del') {
+      if (!confirm(`Eliminar a ${c.nombre}?`)) return;
+      try {
+        await deleteClient(id);
+        await loadAndRender();
+      } catch (err) {
+        alert('No se pudo eliminar el cliente.');
+      }
+    }
+
+    if (act === 'repair') {
+      // Guardá el ID para que Reparaciones precargue al cliente
+      localStorage.setItem('fixly:selectedClientId', id);
+      location.hash = '#reparaciones';
+      alert('Cliente seleccionado. Abrí "Reparaciones" para crear el ticket.');
+    }
+  });
+
+  // guardar (crear/editar)
+  form?.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const id = fId.value || null;
+    const payload = {
+      nombre: fName.value.trim(),
+      celular: normPhone(fPhone.value.trim()),
+      email: fEmail.value.trim(),
+      notas: fNotes.value.trim()
+    };
+    if (!payload.nombre || !payload.celular) return;
+
+    try {
+      if (id) {
+        await updateClient(id, payload);
+      } else {
+        await createClient(payload);
+      }
+      closeModal();
+      await loadAndRender();
+    } catch (err) {
+      if (String(err.message).includes('duplicate_phone')) {
+        dupMsg.classList.remove('hidden');
+      } else {
+        alert('Error al guardar el cliente.');
+      }
+    }
+  });
+
+  // guardar + crear reparación
+  btnSaveRepair?.addEventListener('click', async () => {
+    // forzamos submit (crear/editar)
+    const submitEvt = new Event('submit', { cancelable: true });
+    form.dispatchEvent(submitEvt);
+    // Si el modal sigue visible por error/duplicado, no sigas
+    setTimeout(async () => {
+      if (!modal.classList.contains('hidden')) return;
+      // refrescamos lista y tomamos el más reciente (backend debería devolverlo en list)
+      await loadAndRender();
+      const last = clients[0];
+      if (last?.id) {
+        localStorage.setItem('fixly:selectedClientId', last.id);
+        location.hash = '#reparaciones';
+        alert('Cliente guardado. Abrí "Reparaciones" para crear el ticket.');
+      }
+    }, 50);
+  });
+
+  // init
+  document.addEventListener('DOMContentLoaded', loadAndRender);
+})();
+
+
 
                 <!-- WhatsApp -->
                 <div id="whatsapp" class="section p-8">
@@ -2601,12 +2809,236 @@ ventanaImpresion.document.close();
             }
             
             // Cargar datos iniciales
-            cargarPedidos();
-            cargarConfiguracion();
-        });
-    </script>
+                cargarPedidos();
+    cargarConfiguracion();
+  });
+</script> <!-- 👈 cierra el script de Pedidos -->
+
+<!-- Script Clientes -->
+<script>
+  // ===== Clientes MVP (Backend) =====
+  const API_BASE = '/api'; // ⚠️ cambia si usás otro host
+const $ = (s, p = document) => p.querySelector(s);
+const $$ = (s, p = document) => [...p.querySelectorAll(s)];
+// // ===== Clientes MVP (Backend) =====
+(() => {
+  // ⚠️ Cambiá esto si tu API está en otro host, ej: 'https://api.fixlytaller.com'
+  const API_BASE = '/api';
+
+  // ---------- Helpers DOM ----------
+  const $  = (s, p = document) => p.querySelector(s);
+  const $$ = (s, p = document) => [...p.querySelectorAll(s)];
+
+  // ---------- Refs UI ----------
+  const tblBody     = $('#clientsTbody');
+  const searchInput = $('#clientSearch');
+  const btnNew      = $('#btnNewClient');
+  const emptyState  = $('#clientsEmpty');
+
+  // Modal
+  const modal      = $('#client-modal');
+  const modalTitle = $('#client-modal-title');
+  const form       = $('#client-form');
+  const fId    = $('#cl-id');
+  const fName  = $('#cl-name');
+  const fPhone = $('#cl-phone');
+  const fEmail = $('#cl-email');
+  const fNotes = $('#cl-notes');
+  const dupMsg = $('#dup-msg');
+  const btnSaveRepair = $('#btn-save-repair');
+
+  // ---------- Estado ----------
+  let clients = [];
+  let page = 1;
+  const limit = 20;
+  let query = '';
+
+  // ---------- API ----------
+  async function api(path, options = {}) {
+    const res = await fetch(`${API_BASE}${path}`, {
+      headers: { 'Content-Type': 'application/json' },
+      credentials: 'include', // si usás sesión por cookies
+      ...options
+    });
+    if (res.status === 204) return null;
+    const data = await res.json().catch(() => ({}));
+    if (!res.ok) {
+      const msg = data?.error || `HTTP ${res.status}`;
+      throw new Error(msg);
+    }
+    return data;
+  }
+
+  const listClients  = (q = '', p = 1) => api(`/clients?query=${encodeURIComponent(q)}&page=${p}&limit=${limit}`);
+  const createClient = (payload)       => api(`/clients`, { method: 'POST',  body: JSON.stringify(payload) });
+  const updateClient = (id, payload)   => api(`/clients/${id}`, { method: 'PATCH', body: JSON.stringify(payload) });
+  const deleteClient = (id)            => api(`/clients/${id}`, { method: 'DELETE' });
+
+  // ---------- Utils ----------
+  const normPhone = (v) => v.replace(/[^\d+]/g, '');
+
+  // ---------- Render ----------
+  function renderRows(list) {
+    tblBody.innerHTML = '';
+    if (!list || !list.length) {
+      emptyState?.classList.remove('hidden');
+      return;
+    }
+    emptyState?.classList.add('hidden');
+
+    list.forEach(c => {
+      const tr = document.createElement('tr');
+      tr.className = 'hover:bg-gray-50';
+      tr.innerHTML = `
+        <td class="px-4 py-3 font-medium text-gray-800">${c.nombre || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.celular || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.email || ''}</td>
+        <td class="px-4 py-3 text-center">
+          <span class="inline-flex items-center justify-center rounded-full bg-gray-200 px-2 text-xs">${c.abiertas ?? 0}</span>
+        </td>
+        <td class="px-4 py-3 text-right">
+          <div class="inline-flex gap-2">
+            <button class="text-indigo-600 hover:underline" data-act="edit" data-id="${c.id}">Editar</button>
+            <button class="text-emerald-600 hover:underline" data-act="repair" data-id="${c.id}">Nueva reparación</button>
+            <button class="text-rose-600 hover:underline" data-act="del" data-id="${c.id}">Eliminar</button>
+          </div>
+        </td>`;
+      tblBody.appendChild(tr);
+    });
+  }
+
+  async function loadAndRender() {
+    try {
+      const data = await listClients(query, page);
+      clients = data.items || [];
+      renderRows(clients);
+    } catch (e) {
+      console.error(e);
+      alert('No se pudieron cargar los clientes.');
+    }
+  }
+
+  // ---------- Modal ----------
+  function openModal(mode = 'new', client = null) {
+    modal.classList.remove('hidden');
+    dupMsg.classList.add('hidden');
+    if (mode === 'edit' && client) {
+      modalTitle.textContent = 'Editar cliente';
+      fId.value    = client.id;
+      fName.value  = client.nombre || '';
+      fPhone.value = client.celular || '';
+      fEmail.value = client.email || '';
+      fNotes.value = client.notas || '';
+    } else {
+      modalTitle.textContent = 'Nuevo cliente';
+      fId.value = '';
+      form.reset();
+    }
+    setTimeout(() => fName.focus(), 20);
+  }
+  function closeModal() { modal.classList.add('hidden'); }
+
+  // ---------- Eventos ----------
+  // Abrir modal nuevo
+  btnNew?.addEventListener('click', () => openModal('new'));
+
+  // Cerrar modal (fondo y botón X)
+  $$('#client-modal [data-close-modal]').forEach(el => el.addEventListener('click', closeModal));
+
+  // Búsqueda
+  searchInput?.addEventListener('input', (e) => {
+    query = e.target.value || '';
+    page = 1;
+    loadAndRender();
+  });
+
+  // Acciones en tabla
+  tblBody?.addEventListener('click', async (e) => {
+    const btn = e.target.closest('[data-act]');
+    if (!btn) return;
+    const id  = btn.dataset.id;
+    const act = btn.dataset.act;
+    const c   = clients.find(x => x.id === id);
+    if (!c) return;
+
+    if (act === 'edit') openModal('edit', c);
+
+    if (act === 'del') {
+      if (!confirm(`Eliminar a ${c.nombre}?`)) return;
+      try {
+        await deleteClient(id);
+        await loadAndRender();
+      } catch (err) {
+        console.error(err);
+        alert('No se pudo eliminar el cliente.');
+      }
+    }
+
+    if (act === 'repair') {
+      // Pasá el cliente seleccionado al módulo Reparaciones
+      localStorage.setItem('fixly:selectedClientId', id);
+      location.hash = '#reparaciones';
+      alert('Cliente seleccionado. Abrí "Reparaciones" para crear el ticket.');
+    }
+  });
+
+  // Guardar (crear/editar)
+  form?.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const id = fId.value || null;
+    const payload = {
+      nombre:  fName.value.trim(),
+      celular: normPhone(fPhone.value.trim()),
+      email:   fEmail.value.trim(),
+      notas:   fNotes.value.trim()
+    };
+    if (!payload.nombre || !payload.celular) return;
+
+    try {
+      if (id) await updateClient(id, payload);
+      else    await createClient(payload);
+      closeModal();
+      await loadAndRender();
+    } catch (err) {
+      const msg = String(err.message || '');
+      if (msg.includes('duplicate_phone') || msg.includes('409')) {
+        dupMsg.classList.remove('hidden');
+      } else {
+        console.error(err);
+        alert('Error al guardar el cliente.');
+      }
+    }
+  });
+
+  // Guardar + crear reparación
+  btnSaveRepair?.addEventListener('click', async () => {
+    // Dispará submit (crea/edita). Si hay duplicado, el modal no se cierra.
+    const submitEvt = new Event('submit', { cancelable: true });
+    form.dispatchEvent(submitEvt);
+
+    // Esperá un tick; si el modal sigue abierto hubo error.
+    setTimeout(async () => {
+      if (!modal.classList.contains('hidden')) return;
+      await loadAndRender();
+      const last = clients[0];
+      if (last?.id) {
+        localStorage.setItem('fixly:selectedClientId', last.id);
+        location.hash = '#reparaciones';
+        alert('Cliente guardado. Abrí "Reparaciones" para crear el ticket.');
+      }
+    }, 50);
+  });
+
+  // ---------- Init ----------
+  document.addEventListener('DOMContentLoaded', loadAndRender);
+})();
+
+
+</script>
+
 </body>
 </html>
+
     <script id="html_badge_script1">
         window.__genspark_remove_badge_link = "https://www.genspark.ai/api/html_badge/" +
             "remove_badge?token=To%2FBnjzloZ3UfQdcSaYfDuUXOJHRBty4VZVnGULVxJUWI0WDGypcKqoKyoaQT5GzhVwUEVoPGE1Ww0JI1fxjBDdPDETQcgOdf9TBSwVHO9PANzDwZpOZx2nFB2xRwcwPN2LSei862hJqpbl3qo5HL95T8ktHIu1X2NnmEkZlh8eWh4rWtTEvA1JA460KFjOaWVBo22dAd7La60y1xkXa%2FjqTgjfI0BME5Em3Xys9ahuK3wqViTw%2BWW6LlIkerxKnbVqr2GQHaBN0r9yDhsWkmt7REl1Y4gEZVEsc%2BmFKDfuMCKVsdK1mXcpyezIIOja%2Fnmqt1finOu3njhP0qtyjGoqcYctwwt%2B6Q1cxYOeUsPDqpu9LGiYR40pNL5nNMiVENIGpoa3KK%2BIpQhh7yhU243GwghGS1iSLYckk1xcgBuWg2f8jPv9SQq%2Bs%2BhHosmc1De9q%2BA1BRtMneDuGKkVqCSqZDDkTzU81lq1wDtNvXrz85PaZ9syC7yrENRTIFF74WrY8PGiz1mdY4Gyyi8qyMg%3D%3D";
