--- a/index.html
+++ b/index.html
@@ -2834,6 +2834,193 @@ ventanaImpresion.document.close();
 </script>
 
 <script id="html_notice_dialog_script" src="https://www.genspark.ai/notice_dialog.js"></script>
+<!-- Script Clientes (localStorage) -->
+<script>
+(() => {
+  const LS_CLIENTS = 'fixly:clients';
+  const LS_REPAIRS = 'fixly:repairs'; // para contar "Activas"
+
+  const $  = (s, p = document) => p.querySelector(s);
+  const $$ = (s, p = document) => [...p.querySelectorAll(s)];
+
+  // Refs UI
+  const tblBody     = $('#clientsTbody');
+  const searchInput = $('#clientSearch');
+  const btnNew      = $('#btnNewClient') || $('#btnEmptyNew');
+  const emptyState  = $('#clientsEmpty');
+
+  // Modal
+  const modal      = $('#client-modal');
+  const modalTitle = $('#client-modal-title');
+  const form       = $('#client-form');
+  const fId    = $('#cl-id');
+  const fName  = $('#cl-name');
+  const fPhone = $('#cl-phone');
+  const fEmail = $('#cl-email');
+  const fNotes = $('#cl-notes');
+  const dupMsg = $('#dup-msg');
+  const btnSaveRepair = $('#btn-save-repair');
+
+  // ===== Storage helpers =====
+  const loadClients = () => JSON.parse(localStorage.getItem(LS_CLIENTS) || '[]');
+  const saveClients = (arr) => localStorage.setItem(LS_CLIENTS, JSON.stringify(arr));
+  const loadRepairs = () => JSON.parse(localStorage.getItem(LS_REPAIRS) || '[]');
+
+  const normPhone = (v) => (v || '').replace(/[^\d+]/g, '');
+  const uid = () => (crypto.randomUUID ? crypto.randomUUID() : String(Date.now()) + Math.random());
+
+  // ===== State =====
+  let clients = [];
+  let query = '';
+
+  // ===== Render =====
+  function abiertasDe(id) {
+    const reps = loadRepairs();
+    return reps.filter(r => r.clientId === id && r.estado !== 'entregado' && r.estado !== 'cancelado').length;
+  }
+
+  function renderRows(list) {
+    tblBody.innerHTML = '';
+    if (!list.length) {
+      emptyState?.classList.remove('hidden');
+      return;
+    }
+    emptyState?.classList.add('hidden');
+
+    list.forEach(c => {
+      const tr = document.createElement('tr');
+      tr.className = 'hover:bg-gray-50';
+      tr.innerHTML = `
+        <td class="px-4 py-3 font-medium text-gray-800">${c.nombre || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.celular || ''}</td>
+        <td class="px-4 py-3 text-gray-700">${c.email || ''}</td>
+        <td class="px-4 py-3 text-center">
+          <span class="inline-flex items-center justify-center rounded-full bg-gray-200 px-2 text-xs">${abiertasDe(c.id)}</span>
+        </td>
+        <td class="px-4 py-3 text-right">
+          <div class="inline-flex gap-2">
+            <button class="text-indigo-600 hover:underline" data-act="edit" data-id="${c.id}">Editar</button>
+            <button class="text-emerald-600 hover:underline" data-act="repair" data-id="${c.id}">Nueva reparación</button>
+            <button class="text-rose-600 hover:underline" data-act="del" data-id="${c.id}">Eliminar</button>
+          </div>
+        </td>`;
+      tblBody.appendChild(tr);
+    });
+  }
+
+  function applyFilter() {
+    const q = query.toLowerCase();
+    const list = q
+      ? clients.filter(c =>
+          (c.nombre || '').toLowerCase().includes(q) ||
+          (c.celular || '').toLowerCase().includes(q)
+        )
+      : clients;
+    renderRows(list);
+  }
+
+  function loadAndRender() {
+    clients = loadClients();
+    applyFilter();
+  }
+
+  // ===== Modal =====
+  function openModal(mode = 'new', client = null) {
+    modal.classList.remove('hidden');
+    dupMsg?.classList.add('hidden');
+    if (mode === 'edit' && client) {
+      modalTitle.textContent = 'Editar cliente';
+      fId.value    = client.id;
+      fName.value  = client.nombre || '';
+      fPhone.value = client.celular || '';
+      fEmail.value = client.email || '';
+      fNotes.value = client.notas || '';
+    } else {
+      modalTitle.textContent = 'Nuevo cliente';
+      fId.value = '';
+      form.reset();
+    }
+    setTimeout(() => fName.focus(), 20);
+  }
+  const closeModal = () => modal.classList.add('hidden');
+
+  // ===== Events =====
+  btnNew?.addEventListener('click', () => openModal('new'));
+  $$('#client-modal [data-close-modal]').forEach(el => el.addEventListener('click', closeModal));
+
+  searchInput?.addEventListener('input', (e) => { query = e.target.value || ''; applyFilter(); });
+
+  tblBody?.addEventListener('click', (e) => {
+    const btn = e.target.closest('[data-act]');
+    if (!btn) return;
+    const id  = btn.dataset.id;
+    const act = btn.dataset.act;
+    const c   = clients.find(x => x.id === id);
+    if (!c) return;
+
+    if (act === 'edit') return openModal('edit', c);
+
+    if (act === 'del') {
+      if (!confirm(`Eliminar a ${c.nombre}?`)) return;
+      clients = clients.filter(x => x.id !== id);
+      saveClients(clients);
+      applyFilter();
+      return;
+    }
+
+    if (act === 'repair') {
+      localStorage.setItem('fixly:selectedClientId', id);
+      location.hash = '#reparaciones';
+      alert('Cliente seleccionado. Abrí "Reparaciones" para crear el ticket.');
+      return;
+    }
+  });
+
+  form?.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const id = fId.value || uid();
+    const payload = {
+      id,
+      nombre: fName.value.trim(),
+      celular: normPhone(fPhone.value.trim()),
+      email: fEmail.value.trim(),
+      notas: fNotes.value.trim(),
+      updated_at: Date.now()
+    };
+    if (!payload.nombre || !payload.celular) return;
+
+    // anti-duplicado por celular
+    const dup = clients.find(x => normPhone(x.celular) === payload.celular && x.id !== fId.value);
+    if (dup) { dupMsg?.classList.remove('hidden'); return; }
+    dupMsg?.classList.add('hidden');
+
+    if (fId.value) {
+      const i = clients.findIndex(x => x.id === id);
+      clients[i] = { ...clients[i], ...payload };
+    } else {
+      clients.unshift(payload);
+    }
+    saveClients(clients);
+    closeModal();
+    applyFilter();
+  });
+
+  btnSaveRepair?.addEventListener('click', () => {
+    form.dispatchEvent(new Event('submit', { cancelable: true }));
+    setTimeout(() => {
+      if (!modal.classList.contains('hidden')) return; // hubo error/dup
+      const last = clients[0];
+      if (last?.id) {
+        localStorage.setItem('fixly:selectedClientId', last.id);
+        location.hash = '#reparaciones';
+        alert('Cliente guardado. Abrí "Reparaciones" para crear el ticket.');
+      }
+    }, 50);
+  });
+
+  document.addEventListener('DOMContentLoaded', loadAndRender);
+})();
+</script>
 
 </body>
 </html>
