--- a/index.html
+++ b/index.html
@@ -127,17 +127,42 @@
         }
 
         /* Estilos para la hoja de impresión - ULTRA COMPACTO */
-        .print-page {
-            width: 210mm;
-            min-height: 297mm;
-            padding: 5mm;
-            margin: 0 auto;
-            background: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            font-family: Arial, sans-serif;
-            font-size: 7px;
-            line-height: 1.1;
-        }
+        /* Estilos para la hoja de impresión - AJUSTADO A A4 */
+.print-page {
+    width: 210mm;
+    min-height: 297mm;
+    padding: 3mm; /* antes 5mm */
+    margin: 0 auto;
+    background: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    font-family: Arial, sans-serif;
+    font-size: 12px;   /* antes 7px */
+    line-height: 1.4;  /* antes 1.1 */
+}
+
+@page {
+    margin: 0;
+    size: A4;
+}
+
+body * {
+    visibility: hidden;
+}
+
+.print-page, .print-page * {
+    visibility: visible;
+}
+
+.print-page {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 3mm; /* mismo ajuste que arriba */
+    box-shadow: none;
+}
         
         .print-header {
             text-align: center;
